# funcplotter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Plotter.desktop  README.md  frazioni.h  funcplotter.cpp  funcplotter.h  funcplotter.h.autosave  funcplotter.pro  funcplotter.ui  function.h  funzioni.h  gresource.cmake  main.cpp  mainwindow.ui  math1.h  plotter.c  plotter.glade  stringutils.h
core/: core.pro  core.testpro  funcplotter.cpp  funcplotter.h  function.cpp  main.cpp  math.h  support.cpp
core/math/: function.cpp  globals.h  math.h  support.cpp  support.h
core/math/core/: function.cpp  math.h  support.cpp
funcplotterCore/: funcplotter.cpp  funcplotter.h  funcplotter.pro  funcplotterCore.pro
funcplotterCore/src/math/: function.cpp  math.h
funcplotterTest/: funcplotterTest.pro  tst_funcplottertesttest.cpp
src/: CMakeLists.txt  extvar.h  function.c  function.h  globals.h  install_option.h  install_option1.c  install_option2.c  math1.c  math1.h  plotter.c  plotter.desktop  plotter.glade  plotter.gresource.xml  plotter.h  stringutils.c  stringutils.h
src/math/: function.cpp  math.h  support.cpp
test/: test.pro  tst_functiontest.cpp
